# cf-fitter

./: .gitignore  .gitignore~  CMakeLists.txt  README.md
calc/: calc_common.hpp  fit_cmd.cpp  main.cpp  make_cf_cmd.cpp  phi_alpha_potentials_cmd.cpp  phi_alpha_summary_cmd.cpp  square_well_validation.hpp  validate_cmd.cpp
config/channels/: phi_alpha.yaml  phi_proton.yaml  phi_proton_eff.yaml
config/densities/: he4_sg.yaml
config/scenarios/: phi_alpha_bound.yaml  phi_alpha_q_chizzali_tpe_fold.yaml  phi_alpha_q_chizzali_tpe_nofold.yaml  phi_alpha_q_fold.yaml  phi_alpha_q_nofold.yaml  phi_alpha_qd_b040_fold.yaml  phi_alpha_qd_b040_nofold.yaml  phi_alpha_qd_b070_fold.yaml  phi_alpha_qd_b070_nofold.yaml  phi_alpha_qd_fold.yaml  phi_alpha_qd_nofold.yaml  phi_alpha_strong.yaml  phi_alpha_weak.yaml  phi_proton_ALICEeff.yaml  phi_proton_ALICEfig.yaml  phi_proton_ChizzaliERE.yaml  phi_proton_Chizzali_b040.yaml  phi_proton_Chizzali_b055.yaml  phi_proton_Chizzali_b070.yaml  phi_proton_HAL.yaml  phi_proton_HALplusBound.yaml  phi_proton_HALquartetChizzaliTa12TPE.yaml  phi_proton_HALquartetFitB.yaml  phi_proton_eff_ALICEgauss.yaml
docs/: ROADMAP.md  writeup.md  writeup_appendix.md
figures/: etminan_overlay.py  make_phi_alpha_chizzali_tpe_figure.py  make_phi_alpha_current_doublet_ere_summary.py  make_phi_alpha_doublet_potential_shapes.py  make_phi_alpha_doublet_shape_uncertainty.py  make_summary_pdf.py
include/femto/: CfFitterRoot.hpp  ChannelRegistry.hpp  ChannelSpec.hpp  Convention.hpp  FemtoModels.hpp  ModelFactory.hpp  PotentialBuilder.hpp  PotentialUtils.hpp  Scenario.hpp  YamlReader.hpp
macro/: fitCf.C  fitCf_C.d
scripts/: plot_cf.py  regenerate_phialpha_chizzali_tpe.sh  regenerate_phialpha_folded.sh  regenerate_phialpha_pipeline.sh  run_fit_demo.sh
src/: CfFitterRoot.cpp  ChannelRegistry.cpp  ChannelSpec.cpp  ModelFactory.cpp  NumericFolding.cpp  PotentialBuilder.cpp  PotentialUtils.cpp  Scenario.cpp  YamlReader.cpp
tests/: test_chizzali_ta12_tpe_potential.cpp  test_folded_gaussian.cpp  test_ll_kp_consistency.cpp  test_numeric_folding.cpp  test_square_well_solver.cpp
validation/etminan_phialpha/: README.md  digitize_etminan_fig4.py
validation/phi_alpha/: compare_phi_alpha.py
validation/phi_p/: README.md  compare_phi_p.py  phi_p_ALICE_params.yaml
